--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-react-app": "^3.1.2",
     "big-js": "^3.1.3",
     "big.js": "^6.2.0",
+    "express": "^4.18.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
